--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes> 
+
+<nav>
+    <a style="margin-right: 8px;" routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
+<router-outlet></router-outlet>
+
 <app-messages></app-messages>
