--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,6 +8,8 @@
         </label>
     </div>
 
+    <button (click)="save()">save</button>
+    <br>
     <button (click)="goBack()">go back</button>
 </div>
 
